fixed padding overflow

--- a/app/pages/Home/Home.scss
+++ b/app/pages/Home/Home.scss
@@ -1,1 +1,5 @@
 @import "../../scss/variables";
+
+.Home {
+    padding: 10px;
+}
